[gd_scene load_steps=3 format=3 uid="uid://d2385b0e1mobn"]

[ext_resource type="Script" path="res://season/semisimulation.gd" id="1_32nx1"]
[ext_resource type="Texture2D" uid="uid://bv3q5vrommeos" path="res://briefcase.png" id="2_wcv26"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_32nx1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -29.0
offset_top = -31.0
offset_right = 1183.0
offset_bottom = 675.0
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 14.0
offset_right = 272.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 50
text = "Season"

[node name="Label2" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 130.0
offset_right = 624.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 30
text = "Coach"

[node name="Label3" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 166.0
offset_right = 624.0
offset_bottom = 208.0
theme_override_font_sizes/font_size = 30
text = "by a score of"

[node name="Label4" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 220.0
offset_right = 624.0
offset_bottom = 262.0
theme_override_font_sizes/font_size = 30
text = "Full Semifinal Results:"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 550.0
offset_right = 732.0
offset_bottom = 613.0
theme_override_font_sizes/font_size = 40
text = "Sim to Week 16"

[node name="CoachButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1011.0
offset_top = 8.0
offset_right = 1141.0
offset_bottom = 71.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
text = "Office"
icon = ExtResource("2_wcv26")
flat = true

[node name="Tree" type="Tree" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 282.0
offset_right = 789.0
offset_bottom = 539.0
columns = 3
column_titles_visible = true
hide_root = true
select_mode = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CoachButton" to="." method="_on_coach_button_pressed"]
